RDS/AWS-MYSQL-RDS-VPC-SG.template
{
  "AWSTemplateFormatVersion" : "2010-09-09",

  "Description" : "AWS CloudFormation MySQL RDS Template. **WARNING** This template creates an Amazon Relational Database Service database instance. You will be billed for the AWS resources used if you create a stack from this template.",

  "Parameters" : {

    "VpcId": {
      "Description": "VPC ID for resources",
      "Type": "AWS::EC2::VPC::Id"
    },

    "Subnets" : {
      "Type": "List<AWS::EC2::Subnet::Id>",
      "Description" : "The list of SubnetIds, for at least two Availability Zones in the region in your Virtual Private Cloud (VPC)"
    },

    "DBName": {
      "Default": "MyDatabase",
      "Description" : "The database name. Mysql cannot be used. It is a reserved word for this engine ",
      "Type": "String",
      "MinLength": "1",
      "MaxLength": "64",
      "AllowedPattern" : "[a-zA-Z][a-zA-Z0-9]*",
      "ConstraintDescription" : "must begin with a letter and contain only alphanumeric characters."
    },

    "DBUsername": {
      "Default": "root",
      "Description" : "The database admin account username",
      "Type": "String",
      "MinLength": "1",
      "MaxLength": "16",
      "AllowedPattern" : "[a-zA-Z][a-zA-Z0-9]*",
      "ConstraintDescription" : "must begin with a letter and contain only alphanumeric characters."
    },

    "DBPassword": {
      "Default": "adminroot",
      "NoEcho": "true",
      "Description" : "The database admin account password",
      "Type": "String",
      "MinLength": "1",
      "MaxLength": "41",
      "AllowedPattern" : "[a-zA-Z0-9]*",
      "ConstraintDescription" : "must contain only alphanumeric characters."
    },

    "DBClass" : {
      "Default" : "db.t2.small",
      "Description" : "Database instance class",
      "Type" : "String",
      "AllowedValues" : [ "db.t2.micro", "db.t2.medium", "db.t2.small", "db.m4.large", "db.r4.large", "db.r4.xlarge", "db.m1.small", "db.m1.large", "db.m1.xlarge", "db.m2.xlarge", "db.m2.2xlarge", "db.m2.4xlarge" ],
      "ConstraintDescription" : "must select a valid database instance type."
    },

    "DBAllocatedStorage" : {
      "Default": "20",
      "Description" : "The size of the database (Gb)",
      "Type": "Number",
      "MinValue": "5",
      "MaxValue": "1024",
      "ConstraintDescription" : "must be between 5 and 1024Gb."
    },

    "DBStorageType" : {
      "Default": "gp2",
      "Description" : "Data Volume type",
      "Type": "String",
      "AllowedValues" : [ "gp2", "standard", "io1" ],
    }
  },

  "Resources" : {

    "MyDBSubnetGroup" : {
      "Type" : "AWS::RDS::DBSubnetGroup",
      "Properties" : {
        "DBSubnetGroupDescription" : "Subnets available for the RDS DB Instance",
        "SubnetIds" : { "Ref" : "Subnets" }
      }
    },


    "myVPCSecurityGroup" : {
        "Type" : "AWS::EC2::SecurityGroup",
        "Properties" :
        {
           "GroupDescription" : "Security group for RDS DB Instance.",
           "VpcId" : { "Ref" : "VpcId" },
           "SecurityGroupIngress": [{
               "IpProtocol": "tcp",
               "FromPort": 3306,
               "ToPort": 3306,
               "CidrIp": "10.0.0.0/8"
           }, {
               "IpProtocol": "tcp",
               "FromPort": 22,
               "ToPort": 22,
               "CidrIp": "10.0.0.0/8"
           }],
           "Tags": [{
               "Key": "name",
               "Value": {
                   "Fn::Join": [
                       "-", [{
                               "Ref": "AWS::StackName"
                           },
                           "security_group"
                       ]
                   ]
               }
           }, {
               "Key": "maintainer",
               "Value": "devops"
           }]
        }
    },

    "MyDB" : {
      "Type" : "AWS::RDS::DBInstance",
      "Properties" : {
        "DBName" : { "Ref" : "DBName" },
        "DBInstanceIdentifier": {"Ref" : "DBName"},
        "AllocatedStorage" : { "Ref" : "DBAllocatedStorage" },
        "StorageType" : { "Ref" : "DBStorageType" },
        "DBInstanceClass" : { "Ref" : "DBClass" },
        "Engine" : "MySQL",
        "EngineVersion" : "5.6.39",
        "MasterUsername" : { "Ref" : "DBUsername" } ,
        "MasterUserPassword" : { "Ref" : "DBPassword" },
        "DBSubnetGroupName" : { "Ref" : "MyDBSubnetGroup" },
        "VPCSecurityGroups" : [ { "Ref" : "myVPCSecurityGroup" }  ]
      }
    }
  },

  "Outputs" : {
    "JDBCConnectionString": {
      "Description" : "JDBC connection string for database",
      "Value" : { "Fn::Join": [ "", [ "jdbc:mysql://",
                                      { "Fn::GetAtt": [ "MyDB", "Endpoint.Address" ] },
                                      ":",
                                      { "Fn::GetAtt": [ "MyDB", "Endpoint.Port" ] },
                                      "/",
                                      { "Ref": "DBName" }]]}
    }
  }
}
